# flask_learn

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  app.py  config.py  docker-compose.yml  makefile  pyproject.toml  run.sh
application/: app.py  blog.db
application/templates/: about.html  base.html  index.html
db/: __init__.py  models.py  settings.py  tables.py  utils.py
migrations/: env.py
migrations/versions/: 08fbdbfff985_db_creation.py
templates/: about.html  add_article.html  base.html  index.html  post_update.html  posts.html  posts_detail.html
tests/: conftest.py
tests/unit/: test_app.py
