[tool.poetry]
name = "flask_learn"
version = "0.1.0"
description = ""
authors = ["a.v.cherkashin <a.v.cherkashin@tinkoff.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
Flask = "^2.0.3"
Flask-SQLAlchemy = "^2.5.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
allure-pytest = "^2.9.45"
config = "^0.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
